infra/backend-depl.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: tescom-backend-depl
  namespace: backend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: tescom-backend
  template:
    metadata:
      labels:
        app: tescom-backend
    spec:
      containers:
        - name: testcom-backend
          image: teewhy/tescom:latest
---
apiVersion: v1
kind: Service
metadata:
  name: tescom-backend-srv
  namespace: backend
spec:
  selector:
    app: tescom-backend
  ports:
    - name: tescom-backend
      protocol: TCP
      port: 80
      targetPort: 8001
