infra/redis-depl.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: redis
  namespace: backend
  labels:
    app: redis
spec:
  replicas: 1
  selector:
    matchLabels:
      app: redis
  template:
    metadata:
      labels:
        app: redis
    spec:
      containers:
        - name: redis
          image: redis:6.2.5-alpine
          ports:
            - containerPort: 6379
          resources:
            limits:
              memory: '256Mi'
              cpu: '500m'
            requests:
              memory: '128Mi'
              cpu: '250m'
          volumeMounts:
            - name: redis-storage
              mountPath: /data
      volumes:
        - name: redis-storage
          emptyDir: {}

---
apiVersion: v1
kind: Service
metadata:
  name: redis-srv
  namespace: backend
  labels:
    app: redis
spec:
  type: ClusterIP
  ports:
    - port: 6379
      targetPort: 6379
  selector:
    app: redis
